--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,5 +18,5 @@ if(UNIX)
 elseif(WIN32)
     message(FATAL_ERROR "WIN32 TEST")
 else(UNIX)
-    message(FATAL_ERROR "Unsupported platform!")
+    message(FATAL_ERROR "Unknown platform!")
 endif(UNIX)
