Add libraries for Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,8 @@ if(UNIX)
         target_link_libraries(RGBEngine m glfw GL)
     endif(APPLE)
 elseif(WIN32)
-    message(FATAL_ERROR "WIN32 TEST")
+    # set(CMAKE_C_FLAGS_RELEASE "")
+    target_link_libraries(RGBEngine glfw3 opengl32)
 else(UNIX)
     message(FATAL_ERROR "Unknown platform!")
 endif(UNIX)
