Check if compiler is Microsoft Visual C

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,12 @@ if(UNIX)
         target_link_libraries(RGBEngine m glfw GL)
     endif(APPLE)
 elseif(WIN32)
-    # set(CMAKE_C_FLAGS_RELEASE "")
-    target_link_libraries(RGBEngine glfw3 opengl32)
+    if(MSVC)
+        # set(CMAKE_C_FLAGS_RELEASE "")
+        target_link_libraries(RGBEngine glfw3 opengl32)
+    else(MSVC)
+        message(FATAL_ERROR "Unsupported compiler! Use Microsoft Visual C in order to compile RGBEngine.")
+    endif(MSVS)
 else(UNIX)
     message(FATAL_ERROR "Unknown platform!")
 endif(UNIX)
