Add MSVC compiler options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ if(UNIX)
     endif(APPLE)
 elseif(WIN32)
     if(MSVC)
-        # set(CMAKE_C_FLAGS_RELEASE "")
+        set(CMAKE_C_FLAGS_RELEASE "/O2 /Gy /OPT:REF,ICF /fp:fast")
         target_link_libraries(RGBEngine glfw3 opengl32)
     else(MSVC)
         message(FATAL_ERROR "Unsupported compiler! Use Microsoft Visual C in order to compile RGBEngine.")
