--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ elseif(WIN32)
         target_link_libraries(RGBEngine glfw3 opengl32)
     else(MSVC)
         message(FATAL_ERROR "Unsupported compiler! Use Microsoft Visual C in order to compile RGBEngine.")
-    endif(MSVS)
+    endif(MSVC)
 else(UNIX)
     message(FATAL_ERROR "Unknown platform!")
 endif(UNIX)
