Do not link math library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ if(UNIX)
         message(FATAL_ERROR "macOS is not supported!")
     else(APPLE)
         set(CMAKE_C_FLAGS_RELEASE "-std=c18 -m64 -Ofast -flto -march=native -funroll-loops -fno-builtin -s")
-        target_link_libraries(RGBEngine m glfw GL)
+        target_link_libraries(RGBEngine glfw GL)
     endif(APPLE)
 elseif(WIN32)
     if(MSVC)
