Add debug flags for GCC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ if(UNIX)
     if(APPLE)
         message(FATAL_ERROR "macOS is not supported!")
     else(APPLE)
+        set(CMAKE_C_FLAGS_DEBUG "-std=c18 -m64 -g -flto -march=native -funroll-loops -fno-builtin")
         set(CMAKE_C_FLAGS_RELEASE "-std=c18 -m64 -Ofast -flto -march=native -funroll-loops -fno-builtin -s")
         target_link_libraries(RGBEngine m glfw GL)
     endif(APPLE)
