--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ if(UNIX)
     endif(APPLE)
 elseif(WIN32)
     if(MSVC)
+        set(CMAKE_CONFIGURATION_TYPES "Debug;Release;")
         set(CMAKE_C_FLAGS_RELEASE "/O2 /Gy /OPT:REF,ICF /fp:fast")
         target_link_libraries(RGBEngine glfw3 opengl32)
     else(MSVC)
