--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ if(UNIX)
 elseif(WIN32)
     if(MSVC)
         set(CMAKE_CONFIGURATION_TYPES "Debug;Release;")
+        set_target_properties(RGBEngine PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
         set(CMAKE_C_FLAGS_RELEASE "/O2 /Gy /OPT:REF,ICF /fp:fast")
         target_link_libraries(RGBEngine glfw3 opengl32)
     else(MSVC)
