--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,21 +10,26 @@ add_executable(RGBEngine ${SOURCES})
 
 if(UNIX)
     if(APPLE)
-        message(FATAL_ERROR "macOS is not supported!")
+        # macOS
+        message(FATAL_ERROR "macOS is unsupported!")
     else(APPLE)
-        set(CMAKE_C_FLAGS_DEBUG "-std=c18 -m64 -g -flto -march=native -funroll-loops -fno-builtin")
-        set(CMAKE_C_FLAGS_RELEASE "-std=c18 -m64 -Ofast -flto -march=native -funroll-loops -fno-builtin -s")
-        target_link_libraries(RGBEngine m glfw GL)
+        # Linux
+        if("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU")
+            set(CMAKE_C_FLAGS_DEBUG "-std=c18 -m64 -g -Wall -march=native")
+            set(CMAKE_C_FLAGS_RELEASE "-std=c18 -m64 -Wall -Ofast -march=native -flto -fuse-linker-plugin -funroll-loops -fno-builtin -s -ffunction-sections -fdata-sections -Wl,--gc-sections")
+            target_link_libraries(RGBEngine m glfw GL)
+        else("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU")
+            message(FATAL_ERROR "Please install GCC!")
+        endif("${CMAKE_C_COMPILER_ID}" STREQUAL "GNU")
     endif(APPLE)
 elseif(WIN32)
-    if(MSVC)
-        set(CMAKE_CONFIGURATION_TYPES "Debug;Release;")
-        set_target_properties(RGBEngine PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
-        set(CMAKE_C_FLAGS_RELEASE "/O2 /Gy /OPT:REF,ICF /fp:fast")
+    # Windows
+    if("${CMAKE_C_COMPILER_ID}" STREQUAL "MSVC")
+        set(CMAKE_C_FLAGS_RELEASE "/Ox /GL /Gy /OPT:REF /OPT:ICF /fp:fast /arch:AVX2")
         target_link_libraries(RGBEngine glfw3 opengl32)
-    else(MSVC)
-        message(FATAL_ERROR "Unsupported compiler! Use Microsoft Visual C in order to compile RGBEngine.")
-    endif(MSVC)
+    else("${CMAKE_C_COMPILER_ID}" STREQUAL "MSVC")
+        message(FATAL_ERROR "Please install Microsoft Visual Studio!")
+    endif("${CMAKE_C_COMPILER_ID}" STREQUAL "MSVC")
 else(UNIX)
     message(FATAL_ERROR "Unknown platform!")
 endif(UNIX)
